force-app/main/default/objects/Aeropuerto__c/Aeropuerto__c.object-meta.xml
<CustomObject>
    <description>Terreno extenso con pistas  para el aterrizaje y despegue de aeronaves que realizan vuelos de un lugar a otro . También está acondicionado para  reunir personas relacionadas con el servicio de transporte aéreo.</description>
    <label>Aeropuerto</label>
    <nameField>
        <label>Nombre de Aeropuerto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aeropuertos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>