force-app/main/default/objects/Aeropuerto__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <description>Ciudad en la que se encuentra ubicada el aeropuerto</description>
    <label>Ciudad</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pais__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Albacete</fullName>
            </value>
            <value>
                <fullName>Ámsterdam</fullName>
            </value>
            <value>
                <fullName>Antofagasta</fullName>
            </value>
            <value>
                <fullName>Arica</fullName>
            </value>
            <value>
                <fullName>Astaná</fullName>
            </value>
            <value>
                <fullName>Asunción</fullName>
            </value>
            <value>
                <fullName>Atenas</fullName>
            </value>
            <value>
                <fullName>Bagram</fullName>
            </value>
            <value>
                <fullName>Bahia</fullName>
            </value>
            <value>
                <fullName>Balmaceda</fullName>
            </value>
            <value>
                <fullName>Bamiyán</fullName>
            </value>
            <value>
                <fullName>Barcelona</fullName>
            </value>
            <value>
                <fullName>Basilea, Mulhouse, Friburgo</fullName>
            </value>
            <value>
                <fullName>Beja</fullName>
            </value>
            <value>
                <fullName>Berlín</fullName>
            </value>
            <value>
                <fullName>Bilbao</fullName>
            </value>
            <value>
                <fullName>Bogotá</fullName>
            </value>
            <value>
                <fullName>Budapest</fullName>
            </value>
            <value>
                <fullName>Buenos Aires</fullName>
            </value>
            <value>
                <fullName>Burdeos</fullName>
            </value>
            <value>
                <fullName>Cali</fullName>
            </value>
            <value>
                <fullName>Caracas</fullName>
            </value>
            <value>
                <fullName>Casablanca</fullName>
            </value>
            <value>
                <fullName>Castellon</fullName>
            </value>
            <value>
                <fullName>Cayo Coco</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Chihuahua</fullName>
            </value>
            <value>
                <fullName>Ciudad de Corrientes</fullName>
            </value>
            <value>
                <fullName>Ciudad de Formosa</fullName>
            </value>
            <value>
                <fullName>Ciudad de Guatemala</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>