force-app/main/default/objects/Aeropuerto__c/fields/Codigo_Aeropuerto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Aeropuerto__c</fullName>
    <description>Identificador de código para un aeropuerto</description>
    <displayFormat>A-{00000}</displayFormat>
    <label>Código de Aeropuerto</label>
    <type>AutoNumber</type>
</CustomField>