force-app/main/default/objects/Aeropuerto__c/fields/Codigo_IATA__c.field-meta.xml
<CustomField>
    <fullName>Codigo_IATA__c</fullName>
    <description>Designación para cada aeropuerto del mundo</description>
    <label>Código IATA</label>
    <length>10</length>
    <type>Text</type>
</CustomField>