force-app/main/default/objects/Aeropuerto__c/fields/Localizacion__c.field-meta.xml
<CustomField>
    <fullName>Localizacion__c</fullName>
    <description>Localización en longitud y latitud</description>
    <label>Localización</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>