force-app/main/default/objects/Aeropuerto__c/fields/Puertas_de_embarque__c.field-meta.xml
<CustomField>
    <fullName>Puertas_de_embarque__c</fullName>
    <label>Puertas de embarque</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>