force-app/main/default/objects/Aeropuerto__c/fields/Recibe_vuelos_internacionales__c.field-meta.xml
<CustomField>
    <fullName>Recibe_vuelos_internacionales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aeropuertos internacionales y aeropuertos colombianos que reciben vuelos provenientes de otros países</description>
    <label>¿Recibe vuelos internacionales?</label>
    <type>Checkbox</type>
</CustomField>