force-app/main/default/objects/Aeropuerto__c/fields/Recibe_vuelos_nacionales__c.field-meta.xml
<CustomField>
    <fullName>Recibe_vuelos_nacionales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Entiendase como vuelos realizados entre aeropuertos al interior de Colombia</description>
    <label>¿Recibe vuelos nacionales?</label>
    <type>Checkbox</type>
</CustomField>