force-app/main/default/objects/Aeropuerto__c/listViews/Aeropuertos_internacionales.listView-meta.xml
<ListView>
    <fullName>Aeropuertos_internacionales</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Recibe_vuelos_nacionales__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Aeropuertos internacionales</label>
</ListView>