force-app/main/default/objects/Aeropuerto__c/listViews/Aeropuertos_Locales.listView-meta.xml
<ListView>
    <fullName>Aeropuertos_Locales</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Recibe_vuelos_nacionales__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Aeropuertos Locales</label>
</ListView>